src/styles/style.css
/* ... */
.welcome-text {
  width: 80%;
  display: none;
}

/* .welcome-text
  svg
  path:not([stroke='transparent']):not([stroke='none']):not(
    [stroke-opacity='0']
  ) {
  stroke: var(--vara-stroke) !important;
} */

/* .welcome-text svg path[stroke='transparent'],
.welcome-text svg path[stroke='none'],
.welcome-text svg path[stroke-opacity='0'] {
  stroke: transparent !important;
} */

/*******GENERAL STYLING********/
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  text-decoration: none;
}

/* [data-blur-on-scroll].blurred {
  filter: blur(5px);
  transition: filter 0.3s ease;
} */

[data-blur-on-scroll].blurred {
  /* filter: blur(3px); */
  /* transition: filter 0.5s; */
  opacity: 0.3;
}

.transition {
  transition: 0.2s ease-in;
}

/* html {
  font-size: clamp(14px, 0.8vw + 0.5rem, 20px);
} */

html,
body {
  height: 100%;
  /* scroll-snap-type: y mandatory; */
  scroll-padding: var(--header-h) 0 var(--footer-h);
  background: var(--background-color);
}

h2 {
  /* font-family: var(--titles); */
  font-family: var(--primary-font);
  font-size: 2.1rem;
  color: var(--text-color);
  cursor: default;
  color: var(--color-titles);
}

button {
  cursor: pointer;
}

.section-wrapper {
  max-width: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.hide {
  display: none;
}

/*******************HEADER*******************/

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  transition: opacity 0.7s ease-in-out;
}

nav {
  display: flex;
  justify-content: space-between;
  padding: var(--padding-nav-items);
}

nav > a {
  font-family: var(--primary-font);
  font-size: 1.5rem;
  color: var(--text-color);
  text-decoration: none;
  height: fit-content;
}

nav div span {
  color: #d60808;
}

nav ul {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

nav ul li {
  list-style: none;
  font-size: var(--li-font-size);
  display: flex;
  align-items: center;
  gap: 15px;
  justify-content: flex-end;
  padding: 8px;
}

nav ul > li a {
  display: flex;
  gap: 10px;
  align-items: flex-end;
}

nav ul li a > img {
  width: 20px;
}

.animate-icon {
  animation: rotate 2s linear infinite;
}

nav ul li > a:hover img {
  animation: rotate 2s linear infinite;
}

.dark-mode-img {
  margin-top: 20px;
  cursor: pointer;
  width: 25px;
  transition: 0.2s ease-in-out;
}

.dark-mode-img:hover {
  transform: scale(1.2);
}

nav ul a {
  color: var(--text-color);
  font-family: var(--primary-font);
}

/*******************LANDING PAGE*******************/
.landing-page {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  scroll-snap-type: y proximity;
  padding: 0 10rem;
  /* margin-bottom: 50px; */
}

.intro-text {
  /* width: 45%; */
  /* width: 30%;
  aspect-ratio: 1; */
  /* border: 0.5px solid var(--color-titles); */
  text-align: center;
  /* opacity: 0; */
  opacity: 1;
  transition: 1s ease-in-out;
  font-family: var(--primary-font);
  color: var(--text-color);
  font-size: 1.2rem;
  color: var(--color-titles);
}

.intro {
  width: 20%;
  aspect-ratio: 1;
  border: 0.5px solid var(--color-titles);
  position: relative;
}

.intro div {
  position: absolute;
  color: var(--color-titles);
  font-family: var(--primary-font);
  padding: 10px;
}

/*********CHANGE THIS TO VARIABLE***********/
.opacity-1 {
  opacity: 1;
}

/*******************PROJECTS*******************/
.projects,
.about {
  display: flex;
  justify-content: center;
  min-height: 100vh;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

.about.is-visible,
.projects.is-visible,
nav.is-visible,
footer.is-visible {
  opacity: 1;
}

.projects h4 {
  font-size: 1.25rem;
  font-weight: 400;
  font-family: var(--lg-text);
  color: var(--text-color-grey-title);
  cursor: default;
}

.project-card {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  position: relative;
  margin-block-end: 1rem;
}

.project-card:not(:last-child) {
  margin-block-end: 1rem;
}

.project-card p {
  font-family: var(--lg-text);
  color: #9f9f9e;
  font-size: clamp(0.75rem, 1rem, 1.2rem);
  cursor: default;
}

.tools-used {
  width: fit-content;
  text-transform: uppercase;
  cursor: default;
}

.tools-used span {
  color: rgb(105, 105, 105);
  font-family: monospace;
  display: inline;
}

.project-btns {
  width: fit-content;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.external-links {
  display: flex;
  align-items: flex-end;
  font-family: var(--lg-text);
  gap: 1rem;
  font-weight: 300;
}

.external-links a {
  display: flex;
  gap: 5px;
  color: rgb(105, 105, 105);
}

.project-btns img {
  width: 0.8rem;
}

.read-more-btn {
  font-family: var(--lg-text);
  font-weight: 400;
  color: #9f9f9e;
}

/*******************ABOUT*********************/

.about img {
  width: 100%;
  /* display: none; */
}

.about-text-wrapper {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.about-text {
  /* opacity: 0; */
  font-family: var(--lg-text);
  font-weight: lighter;
  color: #9f9f9e;
  /* transition: 1s ease-in-out; */
}

/*******************FOOTER*******************/
footer {
  padding: var(--padding-nav-items);
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  font-size: var(--li-font-size);
  /* opacity: 0; */
  transition: opacity 0.7s ease-in-out;
  /* backdrop-filter: blur(1px); */
}

footer ul li {
  list-style: none;
  display: flex;
  align-items: flex-end;
  gap: 10px;
}

footer a {
  color: var(--text-color);
  font-family: var(--primary-font);
}

footer img {
  width: 20px;
}

footer ul {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

/***********ANIMATIONS************/
@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
/* ... */

